--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 	<title>Drag and Drop Puzzle Game</title>
@@ -15,10 +15,10 @@
 	<section id="game-boards">
 		<!-- these are the draggable pieces -->
 		<div class="puzzle-pieces">
-			<img id="topLeft" draggable src="images/topLeft0.jpg" class="puzzle-image" alt="top left">
-			<img id="topRight" draggable src="images/topRight0.jpg" class="puzzle-image" alt="top right">
-			<img id="bottomLeft" draggable src="images/bottomLeft0.jpg" class="puzzle-image" alt="bottom left">
-			<img id="bottomRight" draggable src="images/bottomRight0.jpg" class="puzzle-image" alt="bottom right">
+			<img id="topLeft" draggable="true" src="images/topLeft0.jpg" class="puzzle-image" alt="top left">
+			<img id="topRight" draggable="true" src="images/topRight0.jpg" class="puzzle-image" alt="top right">
+			<img id="bottomLeft" draggable="true" src="images/bottomLeft0.jpg" class="puzzle-image" alt="bottom left">
+			<img id="bottomRight" draggable="true" src="images/bottomRight0.jpg" class="puzzle-image" alt="bottom right">
 		</div>
 
 		<!-- we want to drop the draggable pieces here -->
